data/derived/comb/progs/unify/prog5598.ml.out
Characters 47-57:
  if n < 0 then [] else  (n mod 10) @ digitsOfInt (n/10)::[];;
                         ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
